ux giao diện, format giá tiền, ví điện tử

--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -199,6 +199,7 @@
         <ul class="dropdown-menu dropdown-menu-end">
           <li><a class="dropdown-item" th:href="@{/account/profile}">Tài khoản của tôi</a></li>
           <li><a class="dropdown-item" th:href="@{/dsdon-mua}">Đơn mua</a></li>
+          <li><a class="dropdown-item" th:href="@{/vi}">Ví thanh toán</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item text-danger" th:href="@{/customers/logout}">Đăng xuất</a></li>
         </ul>
