--- a/src/main/resources/templates/WebQuanLy/customer-login.html
+++ b/src/main/resources/templates/WebQuanLy/customer-login.html
@@ -525,7 +525,7 @@
                 </button>
 
                 <div class="footer-links">
-                    <a href="#">Quên mật khẩu?</a>
+                    <a href="/customers/auth/forgot-password">Quên mật khẩu?</a>
                     <span class="separator">|</span>
                     <a href="#">Đăng ký ngay</a>
                 </div>
